# comfyui-frameweaver

./: .gitignore  README.md  __init__.py  phase6_plan.md  plan.md  pyproject.toml  requirements.txt  tutorial.md
.skills/comfyui-node/: SKILL.md
.skills/comfyui-workflow/: SKILL.md
example-workflow/: image_qwen_Image_2512.json  image_qwen_image_edit_2511.json  video_ltx2_3_i2v.json  video_ltx2_3_ia2v.json
nodes/: __init__.py
scripts/: build_workflows.py  download_models.sh  generate_5scene_workflow.py  install_custom_node.sh  setup_frameweaver.sh
tests/: conftest.py  test_audio_split.py  test_auto_queue.py  test_frame_math.py  test_nodes.py  test_postprocess.py  test_prompt_utils.py  test_scene_queue.py  test_stacked_scene_pipeline.py  test_validation.py  test_whisper.py  test_workflow_links.py  test_workflows.py
utils/: __init__.py  checkpoint_manager.py  ffmpeg_utils.py  prompt_utils.py  tensor_utils.py  validation.py  vram_manager.py
web/: fw_node_appearance.js  fw_sequencer_sync.js  fw_tooltips.js  fw_widget_behaviors.js
workflows/: edit_workflow.py  frameweaver_ltx23_10scene_veo.json  frameweaver_ltx23_10scene_veo_RuneXX_Edits.json  frameweaver_ltx23_5scene_10sec.json  frameweaver_ltx23_i2v_single_scene.json  frameweaver_ltx23_ia2v_single_scene.json  frameweaver_ltx23_multi_scene_fflf.json  frameweaver_ltx23_music_video.json  frameweaver_ltx23_stacked_scene_relay.json  frameweaver_ltx23_temporal_control.json  frameweaver_ltx23_three_act_feature.json  frameweaver_ltx23_video_piped.json  frameweaver_postprocess_demo.json  test_minimal.json
(+90 files in other folders)
